--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 /data1/nbproject/private/
+/data1/build/
+/data1/dist/
